--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.11.3"
+    "preact": "^10.11.3",
+    "react-circle-progress-bar": "^0.1.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.4.0",
