--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.4.0",
+    "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
